--- a/3Morrowind.html
+++ b/3Morrowind.html
@@ -10,13 +10,13 @@
     <!-- header -->
       <div class="header shadow disp-flex">
           <h1 class="logo" style="font-family: SK;">TES lore</h1>
-          <form action="" target="_blank">
+          <form action="https://jumppad456.github.io/TES/index.html" target="_blank">
             <button class="btn" style="font-family: BT;">Главная</button>
           </form>
           <form action="" target="_blank">
             <button class="btn" style="font-family: BT;">Информация</button>
           </form>
-          <form action="" target="_blank">
+          <form action="https://elderscrolls.fandom.com/ru/wiki/%D0%A5%D1%80%D0%BE%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F" target="_blank">
             <button class="btn" style="font-family: BT;">LORE</button>
           </form>
           <form action="https://bethesda.net/" target="_blank">
@@ -57,36 +57,35 @@
       <!-- Boxes -->
       <div class="disp-flex ">
         <div class="info-box ml-1 shadow">
-          <form action="" 
-          target="_blank">
+          <form action="https://jumppad456.github.io/TES-arena/1Arena.html" target="_blank">
             <button class="TES-btn">
               <img src="1.png" class="img-box">
             </button>  
           </form>
         </div>
         <div class="info-box shadow">
-          <form action="" target="_blank">
+          <form action="https://jumppad456.github.io/TES-daggerfall/2Daggerfall.html" target="_blank">
             <button class="TES-btn">
               <img src="2.webp" class="img-box">
             </button>  
           </form>
         </div>
         <div class="info-box shadow">
-          <form action="" target="_blank">
+          <form action="https://jumppad456.github.io/TES-morrowind/3Morrowind.html" target="_blank">
             <button class="TES-btn">
               <img src="3.png" class="img-box">
             </button>  
           </form>
         </div>
         <div class="info-box shadow">
-          <form action="" target="_blank">
+          <form action="https://jumppad456.github.io/TES-oblivion/4Oblivion.html" target="_blank">
             <button class="TES-btn">
               <img src="4.png" class="img-box">
             </button>  
           </form>
         </div>
         <div class="info-box shadow">
-          <form action="" target="_blank">
+          <form action="https://jumppad456.github.io/TES-skyrim/5Skyrim.html" target="_blank">
             <button class="TES-btn">
               <img src="5.png" class="img-box">
             </button> 
